--- a/index.html
+++ b/index.html
@@ -12,9 +12,178 @@
   </head>
   <body>
     <div class="wrapper">
-      <header></header>
-      <main></main>
+      <div class="hero_wrapper">
+        <header class="header">
+          <div class="container">
+            <div class="header_navbar">
+              <div class="header_img_block">
+                <img src="/img/logo.svg" alt="" />
+                <ul class="header_list">
+                  <li><a href="pricing.html" class="header_link">Pricing</a></li>
+                  <li><a href="about.html" class="header_link">About</a></li>
+                  <li><a href="contact.html" class="header_link">Contact</a></li>
+                </ul>
+              </div>
+              <div>
+                <a href="#" class="header_btn">Schedule a Demo</a>
+                <button class="header_icon"></button>
+              </div>
+            </div>
+            <div></div>
+          </div>
+        </header>
+        <section>
+          <div class="container hero_container">
+            <div class="hero_info_block">
+              <h1 class="hero_title font2">
+                Start building with our APIs for absolutely free.
+              </h1>
+              <form class="hero_form">
+                <input
+                  type="email"
+                  placeholder="Enter email address"
+                  class="hero_input"
+                />
+                <button class="hero_btn">Schedule a Demo</button>
+              </form>
+              <p class="hero_text">
+                Have any questions?
+                <span class="hero_contact"> Contact Us</span>
+              </p>
+            </div>
+            <div>
+              <img src="/img/phone.png" alt="" class="hero_img" />
+            </div>
+          </div>
+        </section>
+      </div>
+      <main>
+        <section class="partners_section">
+          <div class="container">
+            <div class="partners_block">
+              <div class="partners_info_block">
+                <h2 class="partners_title font2">Who we work with</h2>
+                <p class="partners_text">
+                  Today, millions of people around the world have successfully
+                  connected their accounts to apps they love using our API. We
+                  provide developers with the tools they need to create easy and
+                  accessible experiences for their users.
+                </p>
+                <a href="#" class="partners_btn">About Us</a>
+              </div>
+              <div class="partners_logo_block">
+                <img src="/img/tesla.svg" alt="" />
+                <img src="/img/tesla.svg" alt="" />
+                <img src="/img/tesla.svg" alt="" />
+                <img src="/img/tesla.svg" alt="" />
+                <img src="/img/tesla.svg" alt="" />
+                <img src="/img/tesla.svg" alt="" />
+              </div>
+            </div>
+          </div>
+        </section>
+        <section>
+          <div class="container">
+            <div class="implement_block">
+              <div class="implement_img_block">
+                <img src="/img/implement.svg" alt="" class="implement_img" />
+              </div>
+              <div class="implement_info_block">
+                <h2 class="implement_title font2">Easy to implement</h2>
+                <p class="implement_text">
+                  Our API comes with just a few lines of code. You’ll be up and
+                  running in no time. We built our documentation page to
+                  integrate payments functionality with ease.
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section>
+          <div class="container">
+            <div class="ui_block">
+              <div class="implement_info_block">
+                <h2 class="implement_title font2">Simple UI & UX</h2>
+                <p class="implement_text">
+                  Our pre-built form is easy to integrate in your app or
+                  website’s checkout flow and designed to optimize conversion.
+                </p>
+              </div>
+              <div class="ui_img_block">
+                <img src="/img/ui-phone.svg" alt="" />
+                <img src="/img/ui-phone.svg" alt="" />
+              </div>
+            </div>
+          </div>
+        </section>
+        <section>
+          <div class="container">
+            <div class="info_card_block">
+              <div class="info_card">
+                <img src="/img/info-card.svg" alt="" class="info_img" />
+                <h3 class="info_title">Personal Finances</h3>
+                <h3 class="info_text">
+                  Consolidate financial data from multiple sources and
+                  categorize transactions up to 2 years of history. Analyze
+                  reports to reconcile activities in your account.
+                </h3>
+              </div>
+              <div class="info_card">
+                <img src="/img/info-card.svg" alt="" class="info_img" />
+                <h3 class="info_title">Personal Finances</h3>
+                <h3 class="info_text">
+                  Consolidate financial data from multiple sources and
+                  categorize transactions up to 2 years of history. Analyze
+                  reports to reconcile activities in your account.
+                </h3>
+              </div>
+              <div class="info_card">
+                <img src="/img/info-card.svg" alt="" class="info_img" />
+                <h3 class="info_title">Personal Finances</h3>
+                <h3 class="info_text">
+                  Consolidate financial data from multiple sources and
+                  categorize transactions up to 2 years of history. Analyze
+                  reports to reconcile activities in your account.
+                </h3>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section>
+          <div class="container">
+            <div class="register_block">
+              <h2 class="register_title font2">Ready to start?</h2>
+              <form class="register_form">
+                <input
+                  type="email"
+                  placeholder="Enter email address"
+                  class="register_input"
+                />
+                <button class="register_btn">Schedule a Demo</button>
+              </form>
+            </div>
+          </div>
+        </section>
+      </main>
     </div>
-    <footer></footer>
+    <footer class="footer_section">
+      <div class="container">
+        <div class="footer_block">
+          <div class="footer_img_block">
+            <div>
+              <img src="/img/footer-logo.svg" alt="" />
+            </div>
+            <ul class="footer_list">
+              <li><a href="pricing.html" class="footer_link">Pricing</a></li>
+              <li><a href="about.html" class="footer_link">About</a></li>
+              <li><a href="contact.html" class="footer_link">Contact</a></li>
+            </ul>
+          </div>
+          <div>
+            <img src="/img/facebook.svg" alt="" />
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
