--- a/index.html
+++ b/index.html
@@ -17,11 +17,17 @@
           <div class="container">
             <div class="header_navbar">
               <div class="header_img_block">
-                <img src="/img/logo.svg" alt="" />
+                <a href="/index.html">
+                  <img src="/img/logo.svg" alt="" />
+                </a>
                 <ul class="header_list">
-                  <li><a href="pricing.html" class="header_link">Pricing</a></li>
+                  <li>
+                    <a href="pricing.html" class="header_link">Pricing</a>
+                  </li>
                   <li><a href="about.html" class="header_link">About</a></li>
-                  <li><a href="contact.html" class="header_link">Contact</a></li>
+                  <li>
+                    <a href="contact.html" class="header_link">Contact</a>
+                  </li>
                 </ul>
               </div>
               <div>
