--- a/pricing.html
+++ b/pricing.html
@@ -17,7 +17,9 @@
           <div class="container">
             <div class="header_navbar">
               <div class="header_img_block">
-                <img src="/img/logo.svg" alt="" />
+                <a href="/index.html">
+                  <img src="/img/logo.svg" alt="" />
+                </a>
                 <ul class="header_list">
                   <li>
                     <a href="pricing.html" class="header_link">Pricing</a>
